# RustKata

./: README.md
axum_web_fx/: Cargo.toml  README.md
axum_web_fx/src/: main.rs
axum_web_fx/static/: hello.html
binary_search/: README.md
binary_search/src/: main.rs
derive_builder/: Cargo.toml
derive_builder/src/: main.rs
enum_errors/: Cargo.toml  readme.md
enum_errors/src/: main.rs
fizzbuzz/: Cargo.toml
fizzbuzz/src/: main.rs
http_client/: Cargo.toml
http_client/src/: main.rs
json_serialization/: Cargo.toml
json_serialization/src/: main.rs
log_usage/: Cargo.toml
log_usage/src/: main.rs
module_system/: Cargo.toml  Readme.md
module_system/src/: main.rs
module_system/src/routes/: user_route.rs
node_rust_supercharge/: README.md
npi_validator/: Cargo.toml
npi_validator/src/: main.rs
otel_instrumentation/: README.md
otel_instrumentation/src/: main.rs
sqlite_insert_rows/: Cargo.toml  README.md
sqlite_insert_rows/src/: lib.rs  main.rs
state_machine/: Cargo.toml  README.md
state_machine/src/: main.rs
static_site_generator/: Cargo.toml  README.md
static_site_generator/content/: hello-world.md
static_site_generator/public/: hello-world.html  index.html
static_site_generator/src/: main.rs  templates.rs
voyager_scrapper/: Cargo.toml  README.md
voyager_scrapper/src/: main.rs
warp_web_fx/: Cargo.toml  README.md
word_counter/: Cargo.toml  README.md
word_counter/src/: main.rs
