[package]
name = "voyager_scrapper"
version = "0.1.0"
authors = ["Jaxel Rojas <jaxelr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
voyager = { version = "0.1" }
tokio = { version = "0.2", features = ["full"] }
anyhow = "1.0"
futures = "0.3"
reqwest = "0.10"