[package]
name = "warp_web_fx"
version = "0.1.0"
authors = ["Jaxel Rojas <jaxelr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "warp_web_fx"
path = "src/hello_world.rs"

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.3.3"